all responsive issue and scrollbar issue fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  height: 100dvh;
+  /* height: 100dvh; */
   /* overflow-y: hidden; */
   overflow: hidden;
   background-color: #f8f9fb;
@@ -36,6 +36,7 @@ html {
 
 .popup-overlay {
   background: rgba(0, 0, 0, 0.5);
+  z-index: 2147483647 !important;
 }
 [data-popup="tooltip"].popup-overlay {
   background: transparent;
@@ -161,6 +162,23 @@ html {
 }
 
 #tableView::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #c9c7c7;
+}
+#filterModal::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.082);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+#filterModal::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  background-color: #f5f5f5;
+}
+
+#filterModal::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #c9c7c7;
